Run only on node 10 and node 12

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -22,14 +22,14 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: node common/scripts/install-run-rush.js install --bypass-policy
-  
+
   install-on-Mac:
 
     runs-on: macos-latest
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [10.22.x, 12.18.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -38,14 +38,14 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: node common/scripts/install-run-rush.js install --bypass-policy
-      
+
   install-on-Windows:
 
     runs-on: windows-latest
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [10.22.x, 12.18.x]
 
     steps:
     - uses: actions/checkout@v2
